--- a/templates/index.html
+++ b/templates/index.html
@@ -359,7 +359,7 @@
                     <input 
                         type="text" 
                         id="todoInput" 
-                        placeholder="새로운 기록을 추가하세요..."
+                        placeholder="보노보노"
                         autocomplete="off"
                     >
                 </div>
